<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Browser Settings -->
    <PreferenceCategory android:title="@string/settings_browser">

        <SwitchPreferenceCompat
            android:key="pref_javascript"
            android:title="@string/enable_javascript"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="pref_images"
            android:title="@string/enable_images"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="pref_adblocker"
            android:title="@string/enable_adblocker"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="pref_ultra_fast"
            android:title="@string/ultra_fast_mode"
            android:summary="@string/ultra_fast_mode_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <!-- Privacy Settings -->
    <PreferenceCategory android:title="@string/settings_privacy">

        <SwitchPreferenceCompat
            android:key="pref_safe_browsing"
            android:title="@string/safe_browsing"
            android:summary="@string/safe_browsing_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

    <!-- Search Settings -->
    <PreferenceCategory android:title="@string/settings_search">

        <ListPreference
            android:key="pref_search_engine"
            android:title="@string/search_engine"
            android:defaultValue="https://www.google.com/search?q=" />

        <EditTextPreference
            android:key="pref_homepage"
            android:title="@string/homepage"
            android:defaultValue="https://www.google.com"
            android:inputType="textUri" />

    </PreferenceCategory>

    <!-- Language Settings -->
    <PreferenceCategory android:title="@string/settings_language">

        <ListPreference
            android:key="pref_language"
            android:title="@string/language"
            android:defaultValue="system" />

    </PreferenceCategory>

    <!-- Data Settings -->
    <PreferenceCategory android:title="@string/settings_data">

        <Preference
            android:key="pref_clear_cache"
            android:title="@string/clear_cache" />

        <Preference
            android:key="pref_clear_history"
            android:title="@string/clear_history" />

        <Preference
            android:key="pref_clear_cookies"
            android:title="@string/clear_cookies" />

    </PreferenceCategory>

</PreferenceScreen>
